Allow overflow of days in day-picker and and fix positioning

--- a/intranet/static/css/eighth.css
+++ b/intranet/static/css/eighth.css
@@ -45,8 +45,10 @@
 }
 
 .day-picker .day {
-    display: block;
-    float: left;
+    display: inline-block;
+    vertical-align: top;
+    width: 200px;
+    height: 100px;
     margin: 0;
     margin-right: 1px;
     outline: 1px solid rgb(216, 216, 216);
@@ -58,11 +60,6 @@
     margin-left: 0;
 }
 
-.day {
-    width: 200px;
-    height: 100px;
-    display: inline-block;
-}
 
 .day-picker .block-title {
     height: 24px;
@@ -252,48 +249,63 @@ h5.hidden {
     margin: 1px 0 0 -5px;
     margin-right: 3px;
 }
+
 .activity-icon.pie-10 {
     background-position: -210px 0px;
 }
+
 .activity-icon.pie-9 {
     background-position: -189px 0px;
 }
+
 .activity-icon.pie-8 {
     background-position: -168px 0px;
 }
+
 .activity-icon.pie-7 {
     background-position: -147px 0px;
 }
+
 .activity-icon.pie-6 {
     background-position: -126px 0px;
 }
+
 .activity-icon.pie-5 {
     background-position: -105px 0px;
 }
+
 .activity-icon.pie-4 {
     background-position: -84px 0px;
 }
+
 .activity-icon.pie-3 {
     background-position: -63px 0px;
 }
+
 .activity-icon.pie-2 {
     background-position: -42px 0px;
 }
+
 .activity-icon.pie-1 {
     background-position: -21px 0px;
 }
+
 .activity-icon.pie-0 {
     background-position: 0px 0px;
 }
+
 .activity-icon.cancel {
     background-position: -231px 0px;
 }
+
 .activity-icon.restricted {
     background-position: -231px 0px;
 }
+
 .activity-icon.fav {
     background-position: -252px 0px;
 }
+
 .activity-icon.fav.fav-sel {
     background-position: -273px 0px;
 }
